includes/templates/admin/eael-dashboard/src/App.css
/* ... */
.ea__according-content .ea__hide-badge i span .color--exx {
  color: #1570EF;
}

/*-------- Onboard ------------*/

span.title-color-2 {
  color: #FF7B8E;
}

.ea__templately-details .ea__content-details {
  padding: 16px;
  border-radius: 4px;
}

.ea__templately-details .ea__content-details:nth-child(1) {
  background: #F7F4FF;
}

.ea__templately-details .ea__content-details:nth-child(2) {
  background: #FFFAFA;
}

.ea__templately-details .ea__content-details:nth-child(3) {
  background: #FFF8F0;
}

.ea__templately-details .ea__content-details:nth-child(4) {
  background: #F1FAFF;
}

.ea__general-content-item h4 {
  font-size: 22px;
  font-weight: 500;
  line-height: 1.1em;
  color: var(--text-color-25);
  margin-bottom: 8px;
}

.ea__general-content-item p {
  font-size: 16px;
  font-weight: 400;
  color: var(--text-color-100);
  line-height: 1.5em;
}

.ea__general-content-item.video-promo {
  padding: 0;
  background: var(--background-10);
  border: 1px solid var(--border-color-base);
}

.ea__general-content-item.video-promo h2 {
  font-size: 24px;
  margin-bottom: 16px;
}

.ea__general-content-item.video-promo p {
  font-size: 14px;
}

.video-promo-wrapper {
  padding: 16px;
  background: linear-gradient(282.7deg, var(--gardient-3) -7.9%, var(--gardient-4) 35.7%);
  border-radius: 8px;
}

.ea__general-content-item.video-promo .templates-img {
  width: 100%;
}

.ea__general-content-item.video-promo .templates-img img {
  border-radius: 0;
  padding-left: 0;
  height: 100%;
}

/*-------- license-item ------------*/

.ea__license-wrapper {}

.ea__license-wrapper .ea__license-content {
  display: inline-flex;
  align-items: center;
  margin: 16px 0 16px 56px;
  cursor: pointer;
}

.ea__license-wrapper .ea__license-content h5 {
  color: var(--text-icon-100);
  font-size: 16px;
  font-weight: 400;
  line-height: 1.4em;
  text-decoration: underline;
  margin-right: 12px;
}

.ea__license-wrapper .ea__license-content i {
  width: 24px;
  height: 24px;
  background: var(--border-color-base);
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 8px;
  font-weight: 600;
  transition: all .35s ease-in-out;
}

.ea__license-options-wrapper {
  padding-top: 24px;
  border-top: 1px solid var(--label-color);
}

.ea__license-step {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding-bottom: 24px;
}

.ea__license-step-items {
  position: relative;
}

.ea__license-step-items:not(:last-child):after {
  content: '';
  position: absolute;
  bottom: -19px;
  left: 24px;
  width: 1px;
  height: 19px;
  background: var(--text-color-500);
}

.ea__license-step-items:not(:last-child):before {
  content: '';
  position: absolute;
  bottom: -19px;
  left: 22px;
  width: 5px;
  height: 5px;
  border-style: solid;
  border-width: 0 1px 1px 0;
  border-color: var(--text-color-500);
  transform: rotate(45deg);
}

span.step-count {
  width: 48px;
  padding: 12px 0;
  background: var(--background-2);
  border-radius: 8px 0 0 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--base-color-50);
}

.ea__license-step p {
  background: var(--background-13);
  border-radius: 0 8px 8px 0;
  flex: 1;
  padding: 12px 16px;
}

.step-details-ex {
  color: var(--base-color-50);
}

.step-details-ex:hover {
  color: var(--base-color-50);
}

.ea__license-key {
  background: var(--background-14);
  padding: 24px;
  border-radius: 8px;
}

.ea__license-key.ea__invalid-license {
  background: #FEF3F2;
}

.ea__license-key.ea__invalid-license .license-key-items {
  border: 1px solid #F97066;
}

.invalid-text {
  margin-top: 8px;
  gap: 6px;
}

.invalid-text span {
  font-size: 12px;
  line-height: 1em;
  font-weight: 400 !important;
  color: #7A271A;
}

.license-key-items {
  background: var(--base-background);
  border-radius: 8px;
  border: 1px solid var(--border-color-base);
  padding: 4px 6px 4px 0;
  position: relative;
}

.license-key-items i {
  position: absolute;
  left: 16px;
  top: 50%;
  transform: translateY(-50%);
  font-size: 18px;
  color: var(--base-color-50);
}

input.input-api {
  font-size: 16px;
  color: var(--text-icon-500);
  border: none;
  background: transparent;
  outline: 0;
  padding-left: 54px;
  padding-right: 15px;
  flex: 1;
}

input.input-api:disabled {
  box-shadow: none;
  color: var(--text-icon-100) !important;
}

.ea__license-verify {
  padding: 24px;
  background: var(--background-15);
  border-radius: 8px;
  margin-top: 24px;
  display: flex;
  flex-direction: column;
  gap: 18px;
}

.ea__license-verify.warning {
  background: #FEF3F2;
}

.ea__license-verify.warning .license-key-items {
  border: 1px solid #F97066;
}

.ea__general-content-item .ea__license-verify .resend-content {
  font-size: 16px;
  font-weight: 400;
  color: var(--text-icon-500);
  line-height: 1.5em;
}

.ea__license-verify input.input-api {
  padding-left: 15px;
}

#ea__dashboard--wrapper .primary-btn.verify-btn {
  padding: 8px 14px;
  border: 1px solid #D0D5DD;
  box-shadow: 0px 1px 2px 0px #1018280D;
}

#ea__dashboard--wrapper .primary-btn.verify-btn:hover,
#ea__dashboard--wrapper .primary-btn.verify-btn.active {
  border: 1px solid var(--base-color-50);
  background: var(--base-color-50);
  color: var(--base-background);
}

#ea__dashboard--wrapper .primary-btn.install-btn.deactivated {
  color: var(--base-background);
  border: 1px solid #D92D20;
  background: #D92D20;
}

.resend-text {
  color: #1570EF;
  font-weight: 500;
  text-decoration: underline;
  cursor: pointer;
}

.resend-content .info-icon-wrap {
  margin-left: 4px;
  display: inline-flex;
  position: relative;
  cursor: pointer;
}

.resend-content .info-icon-wrap i {
  background: var(--base-color-50);
  border: 4px solid var(--background-2);
  border-radius: 50%;
  width: 22px;
  height: 22px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 8px;
  color: var(--base-background);
  font-weight: 700;
}
/* ... */

