fix the tooltip icon alignment

--- a/includes/templates/admin/eael-dashboard/src/App.css
+++ b/includes/templates/admin/eael-dashboard/src/App.css
@@ -2537,6 +2537,7 @@ input.input-api:disabled {
   display: inline-flex;
   position: relative;
   cursor: pointer;
+  vertical-align: top;
 }
 
 .resend-content .info-icon-wrap i {
